--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,7 @@
 
     <servlet>
         <servlet-name>hServlet</servlet-name>
-        <servlet-class>bstorm.akimts.demojavaee.HelloServlet</servlet-class>
+        <servlet-class>bstorm.akimts.demojavaee.servlets.HelloServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>hServlet</servlet-name>
